#16436 Implementa sugestões code review